# asset_allocation_project

./: .gitignore  README.md  pyproject.toml
cfg/: config.yml
data/processed/: optimization_excel.csv  processed_data.csv
data/raw/: Project1-AssetAllocation-1980s_template.xlsx  Project1-AssetAllocation-1990s_template.xlsx  Project1-AssetAllocation-2000s_template.xlsx
notebooks/: scratchpad.ipynb
src/: interface.py
src/data_processing/: processing_workflow.py
src/optimization/: portfolio_std_solver.py
src/util/: basic_utility.py  latex_formula.py  utility.py
src/util/functions_by_tab/: tab1.py  tab2.py  tab3.py  tab4.py  tab5.py
